--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   <p>Loading...</p>
 </div>
 <header class="header">
-  <a href="Home_Page.html" class="logo-link">
+  <a href="index.html" class="logo-link">
     <img src="readify-logo.svg" alt="Readify" class="logo">
     <span class="logo-text">Readify</span>
   </a>
   <nav class="nav">
     <ul class="nav-links">
-      <li><a class="active" href="Home_Page.html">Home</a></li>
+      <li><a class="active" href="index.html">Home</a></li>
       <li><a href="Explorer_Page.html">Explorer</a></li>
       <li><a href="Tracker_Page.html">Tracker</a></li>
       <li><a href="Recommender_page.html">Recommender</a></li>
@@ -60,29 +60,44 @@
 
 <section class="features reveal-on-scroll">
   <h2>What You Can Do</h2>
+
   <div class="features-container">
-    <div class="feature-card">
-      <div class="icon">📚</div>
-      <h3>Explore Books</h3>
-      <p>Browse our collection and filter by genre, title, or author to find your next read.</p>
-    </div>
-    <div class="feature-card">
-      <div class="icon">📊</div>
-      <h3>Track Progress</h3>
-      <p>Log your pages and reading speed to see your completion % and estimated finish date.</p>
-    </div>
-    <div class="feature-card">
-      <div class="icon">🎲</div>
-      <h3>Get Recommendations</h3>
-      <p>Pick genre and length – we'll randomly suggest a book and you can save it to your list.</p>
-    </div>
-    <div class="feature-card">
-      <div class="icon">🎧</div>
-      <h3>Reading Flow</h3>
-      <p>Turn on ambient sounds, track finished books, and focus on your reading sessions.</p>
-    </div>
+
+    <a href="Explorer_Page.html" class="feature-link">
+      <div class="feature-card">
+        <div class="icon">📚</div>
+        <h3>Explore Books</h3>
+        <p>Browse our collection and filter by genre, title, or author to find your next read.</p>
+      </div>
+    </a>
+
+    <a href="Tracker_Page.html" class="feature-link">
+      <div class="feature-card">
+        <div class="icon">📊</div>
+        <h3>Track Progress</h3>
+        <p>Log your pages and reading speed to see your completion % and estimated finish date.</p>
+      </div>
+    </a>
+
+    <a href="Recommender_Page.html" class="feature-link">
+      <div class="feature-card">
+        <div class="icon">🎲</div>
+        <h3>Get Recommendations</h3>
+        <p>Pick genre and length – we'll randomly suggest a book and you can save it to your list.</p>
+      </div>
+    </a>
+
+    <a href="Flow_Page.html" class="feature-link">
+      <div class="feature-card">
+        <div class="icon">🎧</div>
+        <h3>Reading Flow</h3>
+        <p>Turn on ambient sounds, track finished books, and focus on your reading sessions.</p>
+      </div>
+    </a>
+
   </div>
 </section>
+
 
 <footer class="footer">
   <div class="footer-links">
