--- a/Recommender_page.html
+++ b/Recommender_page.html
@@ -16,13 +16,13 @@
   <p>Loading...</p>
 </div>
 <header class="header">
-  <a href="Home_Page.html" class="logo-link">
+  <a href="index.html" class="logo-link">
     <img src="readify-logo.svg" alt="Readify" class="logo">
     <span class="logo-text">Readify</span>
   </a>
   <nav class="nav">
     <ul class="nav-links">
-      <li><a href="Home_Page.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="Explorer_Page.html">Explorer</a></li>
       <li><a href="Tracker_Page.html">Tracker</a></li>
       <li><a class="active" href="Recommender_page.html">Recommender</a></li>
